fix: corect bug with white space after footer

--- a/src/assets/scss/pages/_default-page.scss
+++ b/src/assets/scss/pages/_default-page.scss
@@ -168,7 +168,7 @@
   .strelitzia-image-default {
     background: url("../images/photos/strelitzia.png") no-repeat;
     width: 30rem;
-    height: 100%;
+    height: 40rem;
     left: 0;
     top: 287rem;
     transform: scale(-1, 1);
