--- a/src/assets/scss/sections/_footer.scss
+++ b/src/assets/scss/sections/_footer.scss
@@ -16,7 +16,7 @@
   &__image-container {
     background: url("../images/photos/leav_foto.png") no-repeat;
     width: 24.5rem;
-    height: 100%;
+    height: 30rem;
     right: 0;
     top: 426rem;
   }
