--- a/src/assets/scss/sections/home/_article.scss
+++ b/src/assets/scss/sections/home/_article.scss
@@ -12,7 +12,7 @@
   &__image-container {
     background: url("../images/photos/flower_foto.png") no-repeat;
     width: 15rem;
-    height: 100%;
+    height: 61rem;
     right: 0;
     top: 79.2rem;
   }
