--- a/src/assets/scss/sections/home/_button-favorite.scss
+++ b/src/assets/scss/sections/home/_button-favorite.scss
@@ -18,7 +18,7 @@
   .strelitzia-image-default {
     background: url("../images/photos/strelitzia.png") no-repeat;
     width: 30rem;
-    height: 100%;
+    height: 40rem;
     right: 0;
     top: 233.4rem;
   }
