--- a/src/assets/scss/sections/home/_headerHome.scss
+++ b/src/assets/scss/sections/home/_headerHome.scss
@@ -81,8 +81,8 @@
     z-index: 3;
     width: 50rem;
     height: 40rem;
-    left: calc(62% - 8.9rem);
-    top: 7.7rem;
+    left: calc(58.4% - 8.9rem);
+    top: 7.5%;
     text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     font: var.$h1-roboto-bold;
     font-size: 106.496px;
